log
Thu Apr 21 15:35:19 UTC 2022: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: ‘b’ undeclared (first use in this function)
     b
     ^
treemap.c:40:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: expected ‘;’ before ‘return’
     return NULL;
     ^~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:3: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   Treenode *aux = tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:73:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Treenode *aux = tree->root;
                   ^~~~
treemap.c:75:35: error: request for member ‘pair’ in something not a structure or union
     if(tree -> lower_than(key, aux->pair->key)){
                                   ^~
treemap.c:76:17: error: request for member ‘left’ in something not a structure or union
       aux = aux -> left;
                 ^~
treemap.c:77:36: error: request for member ‘pair’ in something not a structure or union
     }else if(tree -> lower_than(aux->pair->key,key)){
                                    ^~
treemap.c:78:17: error: request for member ‘right’ in something not a structure or union
       aux = aux -> right;
                 ^~
treemap.c:80:17: error: request for member ‘pair’ in something not a structure or union
       return aux->pair;
                 ^~
treemap.c: In function ‘createTreeMap’:
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c2b0806
Thu Apr 21 15:36:37 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: ‘new’ undeclared (first use in this function); did you mean ‘getw’?
     new->lower_than = lower_than;
     ^~~
     getw
treemap.c:40:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:72:3: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   Treenode *aux = tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:72:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Treenode *aux = tree->root;
                   ^~~~
treemap.c:74:35: error: request for member ‘pair’ in something not a structure or union
     if(tree -> lower_than(key, aux->pair->key)){
                                   ^~
treemap.c:75:17: error: request for member ‘left’ in something not a structure or union
       aux = aux -> left;
                 ^~
treemap.c:76:36: error: request for member ‘pair’ in something not a structure or union
     }else if(tree -> lower_than(aux->pair->key,key)){
                                    ^~
treemap.c:77:17: error: request for member ‘right’ in something not a structure or union
       aux = aux -> right;
                 ^~
treemap.c:79:17: error: request for member ‘pair’ in something not a structure or union
       return aux->pair;
                 ^~
cc1: all warnings being treated as errors
Compilation failed
6f2bce1
Thu Apr 21 15:39:47 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode *new = (TreeMap *)malloc(sizeof(TreeMap));
                     ^
treemap.c:41:9: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘lower_than’
     new -> lower_than = lower_than;
         ^~
treemap.c:42:9: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
     new -> root = NULL;
         ^~
treemap.c:43:12: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
     new -> current = new -> root;
            ^~~~~~~
            parent
treemap.c:43:26: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
     new -> current = new -> root;
                          ^~
treemap.c:44:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return new;
            ^~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:3: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   Treenode *aux = tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:75:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Treenode *aux = tree->root;
                   ^~~~
treemap.c:77:35: error: request for member ‘pair’ in something not a structure or union
     if(tree -> lower_than(key, aux->pair->key)){
                                   ^~
treemap.c:78:17: error: request for member ‘left’ in something not a structure or union
       aux = aux -> left;
                 ^~
treemap.c:79:36: error: request for member ‘pair’ in something not a structure or union
     }else if(tree -> lower_than(aux->pair->key,key)){
                                    ^~
treemap.c:80:17: error: request for member ‘right’ in something not a structure or union
       aux = aux -> right;
                 ^~
treemap.c:82:17: error: request for member ‘pair’ in something not a structure or union
       return aux->pair;
                 ^~
cc1: all warnings being treated as errors
Compilation failed
9af039d
Thu Apr 21 15:40:14 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:3: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   Treenode *aux = tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:75:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Treenode *aux = tree->root;
                   ^~~~
treemap.c:77:35: error: request for member ‘pair’ in something not a structure or union
     if(tree -> lower_than(key, aux->pair->key)){
                                   ^~
treemap.c:78:17: error: request for member ‘left’ in something not a structure or union
       aux = aux -> left;
                 ^~
treemap.c:79:36: error: request for member ‘pair’ in something not a structure or union
     }else if(tree -> lower_than(aux->pair->key,key)){
                                    ^~
treemap.c:80:17: error: request for member ‘right’ in something not a structure or union
       aux = aux -> right;
                 ^~
treemap.c:82:17: error: request for member ‘pair’ in something not a structure or union
       return aux->pair;
                 ^~
cc1: all warnings being treated as errors
Compilation failed
a21285b
Thu Apr 21 15:41:09 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
c4312fa
Thu Apr 21 15:41:48 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
771d507
Thu Apr 21 15:45:44 UTC 2022: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:12: error: ‘return’ with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac9bbf6
Thu Apr 21 16:08:25 UTC 2022: 
 treemap.c | 33 +++++++++++++++++++++++++++------
 1 file changed, 27 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 15/70
a6f835e
Thu Apr 21 16:08:49 UTC 2022: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:3: error: ‘node’ undeclared (first use in this function)
   node = createTreeNode(key, value);
   ^~~~
treemap.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:55:9: error: ‘true’ undeclared (first use in this function); did you mean ‘tree’?
   while(true){
         ^~~~
         tree
Compilation failed
2bf6cc7
Thu Apr 21 16:09:22 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:19: error: invalid initializer
   TreeNode node = createTreeNode(key, value);
                   ^~~~~~~~~~~~~~
treemap.c:60:34: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
         tree -> current  -> left = node;
                                  ^
treemap.c:67:34: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
         tree -> current -> right = node;
                                  ^
Compilation failed
01e91f9
Thu Apr 21 16:09:47 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
813ce28
Thu Apr 21 16:15:55 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
26d6944
